--- a/src/components/Pages/Hero/hero.module.css
+++ b/src/components/Pages/Hero/hero.module.css
@@ -89,7 +89,7 @@ p {
   .hero {
     padding: 0 20px;
     background-position: top 30% right 30%;
-    height: 70vh;
+    height: 92vh;
   }
 
   h1 {
@@ -112,5 +112,21 @@ p {
   .herobtn {
     padding: 12px 60px 12px 45px;
     font-size: 15px;
+  }
+  .title h1 {
+    font-size: 32px;
+  }
+  title h2 {
+    font-size: 12px;
+  }
+  .content {
+    position: absolute;
+    bottom: 40%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .title h1 {
+    font-size: 32px;
   }
 }
